Fix: reduce headings size on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -128,6 +128,30 @@ h5 {
 	font-size: 1rem;
 }
 
+
+@media (max-width: 800px) {
+	h1 {
+		font-size: 2.6rem;
+		font-weight: 800;
+	}
+
+	h2 {
+		font-size: 1.2rem;
+	}
+
+	h3 {
+		font-size: 1.8rem;
+	}
+
+	h4 {
+		font-size: 1.4rem;
+	}
+
+	h5 {
+		font-size: 1rem;
+	}
+}
+
 p,
 .content ul {
 	color: var(--theme-text-light);
